# Strikeout-Props

./: .gitignore  README.md  V1 savant export 5:11 hitter.numbers  V1 savant export 5:9 pitcher.numbers  pyproject.toml  requirements.txt
.github/workflows/: daily.yml  lineup-refresh.yml
config/: email_defaults.yaml  mlb_defaults.yaml  oddstrader.yaml  park_factors.yaml  projection_defaults.yaml  savant_sources.yaml  tracker_defaults.yaml  value_defaults.yaml
data/lines/: 2026-05-28.csv  2026-05-29.csv  2026-05-30.csv  2026-06-07.csv  2026-06-15.csv
data/starters/: 2026-05-28.csv  2026-05-29.csv  2026-05-30.csv  2026-06-07.csv  2026-06-15.csv
data/tracker/: daily_rollup.csv  ev_rollup.csv  ledger.csv  side_rollup.csv  summary.txt
data/value_history/: value_2026-06-19.confirmed.csv  value_2026-06-19.early.csv  value_2026-06-20.confirmed.csv  value_2026-06-20.early.csv  value_2026-06-21.confirmed.csv  value_2026-06-21.early.csv  value_2026-06-22.confirmed.csv  value_2026-06-22.early.csv  value_2026-06-23.confirmed.csv  value_2026-06-23.early.csv  value_2026-06-24.confirmed.csv  value_2026-06-24.early.csv  value_2026-06-25.confirmed.csv  value_2026-06-25.early.csv  value_2026-06-26.confirmed.csv  value_2026-06-26.early.csv  value_2026-06-27.confirmed.csv  value_2026-06-27.early.csv  value_2026-06-28.confirmed.csv  value_2026-06-28.early.csv  value_2026-06-29.confirmed.csv  value_2026-06-29.early.csv  value_2026-06-30.confirmed.csv  value_2026-06-30.early.csv  value_2026-07-01.confirmed.csv  value_2026-07-01.early.csv
src/mlb_kprop/: __main__.py
(+25 files in other folders)
