[project]
name = "mlb-kprop"
version = "0.1.0"
description = "Scrape Baseball Savant inputs and predict pitcher K prop lines."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.32.0",
  "pyyaml>=6.0.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=5.2.0",
  "pandas>=2.2.0",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

